--- a/src/app/facebookhomepage/fb-mainpage/fb-mainpage.component.html
+++ b/src/app/facebookhomepage/fb-mainpage/fb-mainpage.component.html
@@ -2,7 +2,7 @@
     <div class="main-left  hidden lg:block ">
         <div class="h-screen w-96 hover:overflow-y-auto overflow-hidden">
             <div class="mx-5 mt-16  flex cursor-pointer hover:bg-gray-300 w-full border  rounded-lg">
-                <img class="w-10 h-10 rounded-full" src="../../assets/image/Elon_Musk_Colorado_2022_(cropped2).jpg">
+                <img class="w-10 h-10 rounded-full" src="assets/image/Elon_Musk_Colorado_2022_(cropped2).jpg">
                 <div class=" ml-5 mt-2   font-semibold">Elon Musk</div>
             </div>
 
