--- a/src/app/facebookhomepage/fb-mainpage/fb-mainpage.component.html
+++ b/src/app/facebookhomepage/fb-mainpage/fb-mainpage.component.html
@@ -176,16 +176,16 @@
 
             <!-- <div class="flex">
                 <div>
-                    <img  class="object-fill w-full h-full" src="../../../assets/image/Elon_Musk_Colorado_2022_(cropped2).jpg">
+                    <img  class="object-fill w-full h-full" src="/assets/image/Elon_Musk_Colorado_2022_(cropped2).jpg">
                 </div>
                 <div class="">
-                    <img class="cover w-full h-full" src="../../../assets/image/story1.webp">
+                    <img class="cover w-full h-full" src="/assets/image/story1.webp">
                 </div>
                 <div class="">
-                    <img   class="cover w-full h-full" src="../../../assets/image/story2.jpeg">
+                    <img   class="cover w-full h-full" src="/assets/image/story2.jpeg">
                 </div>
                 <div class="">
-                    <img class="cover w-full h-full" src="../../../assets/image/story3.jpg">
+                    <img class="cover w-full h-full" src="/assets/image/story3.jpg">
                 </div>
                 
                 
@@ -195,7 +195,7 @@
             <div class="my_post m-5 -mt-16 rounded-lg bg-white">
             <div class="flex items-center">
             <div class="flex items-center mt-4 gap-5">
-                <img  class=" ml-5 cursor-pointer w-10 h-10  rounded-full"src="../../assets/image/Elon_Musk_Colorado_2022_(cropped2).jpg">
+                <img  class=" ml-5 cursor-pointer w-10 h-10  rounded-full"src="/assets/image/Elon_Musk_Colorado_2022_(cropped2).jpg">
                 <div class="w-full">
                     <input [(ngModel)]="newPost.text" [ngModelOptions]="{ standalone: true }" class="font-semibold  w-full items-center rounded-full mr-2 border-gray-200" type="text" placeholder="what's on your mind,Elon &#63;">
                 </div>
